Fix z-index on image wrapper

--- a/Xtrades.XtradesMarketingPage/src/styles.scss
+++ b/Xtrades.XtradesMarketingPage/src/styles.scss
@@ -19,6 +19,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
+    z-index: -1;
     overflow-y: hidden;
 }
 
